--- a/views/log-in-form.pug
+++ b/views/log-in-form.pug
@@ -12,5 +12,6 @@ block content
       h3 #{messages.error}
     button(type='submit') Log In
 
-  a(href='/sign-up') Sign up
+  span Don't have a user? 
+    a(href='/sign-up') Sign Up 
   
