--- a/views/sign-up-form.pug
+++ b/views/sign-up-form.pug
@@ -1,17 +1,17 @@
 extends layout
 
 block content
-  h1 Sign Up
-
-  form(action='' method='POST')
-    label(for='username') Username: 
-    input(type='text' name='username' required='')
-    label(for='password') Password: 
-    input(type='password' name='password' minlength='8' required='')
-    if (typeof message !== 'undefined')
-      h3 #{message.error}
+  div
+    h1 Sign Up
+    form(action='' method='POST')
+      label(for='username') Username: 
+      input(type='text' name='username' required='')
+      label(for='password') Password: 
+      input(type='password' name='password' minlength='8' required='')
+      if (typeof message !== 'undefined')
+        h3 #{message.error}
      
-    button(type='submit') Sign Up
+      button(type='submit') Sign Up
     
-  a(href='/log-in') Log In
+    a(href='/log-in') Log In
 
