--- a/views/index.pug
+++ b/views/index.pug
@@ -2,21 +2,28 @@ extends layout
 
 block content
   main(class="py-10 px-5")
-    div(class="flex justify-start items-center flex-col cursor-pointer mt-10 rounded-sm bg-white bg-opacity-50 shadow-sm max-w-xl min-h-screen my-0 mx-auto p-7") 
+    div(class="flex justify-start items-center flex-col mt-10 rounded-sm bg-white bg-opacity-50 shadow-sm max-w-xl min-h-screen my-0 mx-auto p-7") 
       h1(class=" text-3xl font-bold pb-6") Message Board
       if messages.length < 1
         span(class="font-semibold") Empty here..
         span(class="material-icons md-48 text-2xl") sentiment_dissatisfied
-
+ 
       each msg in messages
-        div(class="flex flex-col mb-3 text-black rounded-sm bg-white bg-opacity-80 p-5  shadow w-full transform transition duration-150 hover:bg-opacity-90")
+        - const colors = ['green', 'purple', 'blue', 'yellow', 'pink', 'red', 'indigo']
+        - let randomColor = colors[Math.floor(Math.random()*colors.length)] + '-' + Math.floor(Math.random() * (5 - 2 + 1) + 2)
+
+        div(class="flex flex-col mb-3 text-black rounded-sm bg-white bg-opacity-80 p-5 bg- shadow w-full transform transition duration-150 hover:bg-opacity-90")
           div(class=" text-sm flex items-center pb-1")
             if user
-              span(class="mr-2 font-bold rounded-sm bg-green-200 px-2 py-1") #{msg.message_owner.username}
+              span(class=`mr-2 font-bold rounded-sm bg-${randomColor}00 px-2 py-1`) #{msg.message_owner.username}
             else 
-              span(class="mr-2 font-bold rounded-sm bg-gray-200 px-2 py-1") HIDDEN   
-            span(class=" opacity-60") #{formatDistanceToNow(msg.timestamp, {includeSeconds: true, addSuffix: true})} 
+              span(class="mr-2 font-bold rounded-sm bg-gray-200 px-2 py-1") HIDDEN 
 
+            if user    
+              span(class=" opacity-60") #{formatDistanceToNow(msg.timestamp, {includeSeconds: true, addSuffix: true})} 
+            else 
+              span(class=" opacity-60") Some time ago
+              
           span(class="pb-1 font-bold text-lg") #{msg.title}
           p(class="pb-1") #{msg.content} 
 
