Fixed styling issues

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,7 +17,7 @@ html(class=" font-open-sans")
   body(class="font-open-sans")
     span(class=" bg-main h-full w-full bg-no-repeat bg-cover fixed -z-10")
 
-    nav(class="flex justify-between items-center h-14 py-2 px-5 bg-white bg-opacity-95 fixed w-full text-black text-sm")
+    nav(class="flex justify-between items-center h-14 py-2 px-5 bg-white bg-opacity-95 fixed w-full text-black text-sm z-10 lg:px-20")
       div 
         a(class='flex items-center text-lg  font-black text-white rounded-sm bg-gray-800 px-2 py-0.5' href='/') 
           span mo
