--- a/views/create-message.pug
+++ b/views/create-message.pug
@@ -18,6 +18,6 @@ block content
 
         button(class='font-semibold flex items-center justify-center bg-opacity-80 rounded-sm text-gray-900 bg-green-200 py-2 px-2 mt-4 transition-all hover:bg-opacity-100' 
         type='submit')
-          span(class="material-icons mr-1") check_box 
+          span(class="material-icons mr-1" aria-hidden='true') check_box 
           span(class="font-semibold") Submit
 
