--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,7 +17,7 @@ html(class=" font-open-sans")
   body(class="font-open-sans")
     span(class=" bg-main h-full w-full bg-no-repeat bg-cover fixed -z-10")
 
-    nav(class="flex justify-between items-center h-14 py-2 px-4 bg-white bg-opacity-95 fixed w-full text-black text-sm z-10 lg:px-20")
+    nav(class="flex justify-between items-center h-14 py-2 px-7 bg-white bg-opacity-95 fixed w-full text-black text-sm z-10 lg:px-20")
       div 
         a(class='flex items-center text-lg  font-black text-white rounded-sm bg-gray-800 px-2 py-0.5' href='/') 
           span mo
@@ -38,9 +38,9 @@ html(class=" font-open-sans")
               
       else     
         div(class="flex justify-between items-center my-1") 
-          a(class='mr-4 font-semibold flex items-center justify-center bg-opacity-80 rounded-sm bg-gray-200 py-1 px-2 transition-opacity hover:bg-opacity-100' 
+          a(class='mr-5 font-semibold flex items-center justify-center bg-opacity-80 rounded-sm bg-gray-200 py-1 px-2 transition-opacity hover:bg-opacity-100' 
           href='/log-in') Log In
-          a(class='mr-4 font-semibold flex items-center justify-center bg-opacity-80 rounded-sm bg-blue-200 py-1 px-2 transition-opacity hover:bg-opacity-100' 
+          a(class=' font-semibold flex items-center justify-center bg-opacity-80 rounded-sm bg-blue-200 py-1 px-2 transition-opacity hover:bg-opacity-100' 
           href='/sign-up') Sign Up    
             
     block content
